# cairn

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  deny.toml
crates/cairn-cli/: Cargo.toml
crates/cairn-cli/src/: main.rs
crates/cairn-cli/src/cmd/: ctl.rs  daemon.rs  mod.rs  query.rs
crates/cairn-cli/src/cmd/mcp/: mod.rs  types.rs
crates/cairn-cli/src/cmd/mcp/tools/: find_impls.rs  find_imports.rs  find_references.rs  find_symbols.rs  get_outline.rs  (+3 more)
crates/cairn-core/: Cargo.toml  build.rs
crates/cairn-core/src/: anchor.rs  daemon.rs  data_db.rs  enrichment.rs  freshness.rs  indexer.rs  jobs.rs  jsonrpc_dispatch.rs  jsonrpc_errors.rs  lib.rs  lifecycle.rs  lsp_discovery.rs  manifest.rs  migration.rs  paths.rs  query.rs  reconcile.rs  register.rs  registry_db.rs  resolution.rs  snapshot_stats.rs  sockets.rs  startup.rs  storage.rs  testutil.rs  timefmt.rs  watcher.rs
crates/cairn-core/src/cas/: blob.rs  hash.rs  kind_conv.rs  mod.rs  parse.rs  registry.rs  schema.rs  store.rs
crates/cairn-core/src/ctl/: mod.rs
crates/cairn-core/src/ctl/methods/: doctor.rs  jobs.rs  mod.rs  prune.rs  register_repo.rs  reindex_repo.rs  remove_repo.rs  shutdown.rs  status.rs
crates/cairn-core/src/data_rpc/: helpers.rs  mod.rs
crates/cairn-core/src/data_rpc/methods/: find_callees.rs  find_callers.rs  find_impls.rs  find_imports.rs  find_references.rs  find_subtypes.rs  find_supertypes.rs  find_symbols.rs  get_outline.rs  get_symbol_source.rs  list_jobs.rs  list_repos.rs  mod.rs  repo_status.rs
crates/cairn-core/src/jobs/: index.rs  list.rs  metrics.rs  mod.rs  restore.rs  scheduler.rs  tests.rs  worker.rs
crates/cairn-core/src/lsp/: client.rs  error.rs  mod.rs  pool.rs  pool_tests.rs  reader.rs  tests.rs  transport.rs  types.rs
crates/cairn-core/src/lsp/docs/: long_lived_design.md
crates/cairn-core/src/lsp/tests/: client.rs  protocol.rs  reader.rs
crates/cairn-core/src/query/: find_impls.rs  find_imports.rs  find_references.rs  find_symbols.rs  get_outline.rs  get_symbol_source.rs  mod.rs  tests.rs
crates/cairn-core/src/query/tests/: find_impls.rs  find_imports.rs  find_references.rs  find_symbols.rs  tentative.rs
crates/cairn-core/src/reconcile/: tests.rs
crates/cairn-core/src/register/: header_detect.rs  mod.rs
crates/cairn-core/src/workspace_analyzer/: expected.rs  header_detect.rs  lsp_pass.rs  mod.rs  path.rs  persist.rs  run.rs  staleness.rs
crates/cairn-core/tests/: cas_smoke.rs
crates/cairn-lang-api/: Cargo.toml
crates/cairn-lang-api/src/: lib.rs
crates/cairn-lang-c/: Cargo.toml
crates/cairn-lang-c/src/: lib.rs
crates/cairn-lang-clangd-tier3/: Cargo.toml
crates/cairn-lang-clangd-tier3/src/: lib.rs
crates/cairn-lang-cpp/: Cargo.toml
crates/cairn-lang-cpp/src/: analyzer.rs  lib.rs
crates/cairn-lang-csharp/: Cargo.toml
crates/cairn-lang-csharp-tier3/: Cargo.toml
crates/cairn-lang-csharp-tier3/src/: lib.rs
crates/cairn-lang-csharp/src/: analyzer.rs  lib.rs
crates/cairn-lang-go-tier3/: Cargo.toml
crates/cairn-lang-go-tier3/src/: lib.rs
crates/cairn-lang-java/: Cargo.toml
crates/cairn-lang-java-tier3/: Cargo.toml
crates/cairn-lang-java-tier3/src/: lib.rs
crates/cairn-lang-java/src/: analyzer.rs  lib.rs
crates/cairn-lang-kotlin-tier3/: Cargo.toml
crates/cairn-lang-kotlin-tier3/src/: lib.rs
crates/cairn-lang-markdown/: Cargo.toml
crates/cairn-lang-markdown/src/: lib.rs
crates/cairn-lang-objc/: Cargo.toml
crates/cairn-lang-objc/src/: analyzer.rs  lib.rs  macros.rs
crates/cairn-lang-php/: Cargo.toml
crates/cairn-lang-php/src/: analyzer.rs  lib.rs
crates/cairn-lang-python/: Cargo.toml
crates/cairn-lang-python-tier25/: Cargo.toml
crates/cairn-lang-python-tier25/src/: const_resolver.rs  dispatch.rs  lib.rs  mro.rs  require_graph.rs  tests.rs
crates/cairn-lang-python-tier3/: Cargo.toml
crates/cairn-lang-python-tier3/src/: lib.rs
crates/cairn-lang-python/src/: analyzer.rs  lib.rs
crates/cairn-lang-ruby/: Cargo.toml
crates/cairn-lang-ruby-tier3/: Cargo.toml
crates/cairn-lang-ruby-tier3/src/: lib.rs
crates/cairn-lang-ruby/src/: analyzer.rs  lib.rs
crates/cairn-lang-rust/: Cargo.toml
crates/cairn-lang-rust-tier3/: Cargo.toml
crates/cairn-lang-rust-tier3/src/: lib.rs
crates/cairn-lang-rust/src/: analyzer.rs  lib.rs
crates/cairn-lang-swift-tier3/: Cargo.toml
crates/cairn-lang-swift-tier3/src/: lib.rs
crates/cairn-lang-treesitter-generic/: Cargo.toml
crates/cairn-lang-treesitter-generic/src/: lib.rs
crates/cairn-lang-typescript/: Cargo.toml
crates/cairn-lang-typescript-tier3/: Cargo.toml
crates/cairn-lang-typescript-tier3/src/: lib.rs  site_collector.rs
crates/cairn-lang-typescript/src/: analyzer.rs  lib.rs
crates/cairn-proto/: Cargo.toml
crates/cairn-proto/src/: common.rs  control.rs  job_id_serde.rs  jsonrpc.rs  lib.rs  methods.rs  reconcile_status.rs  version.rs
crates/cairn-resolver-eval/: Cargo.toml
crates/cairn-resolver-eval/fixtures/csharp/src/: BaseService.cs  Contracts.cs  IntermediateService.cs  Main.cs  Service.cs
crates/cairn-resolver-eval/fixtures/javascript/src/: base.js  intermediate.js  main.js  service.js
crates/cairn-resolver-eval/fixtures/php/src/: BaseService.php  IntermediateService.php  Service.php  main.php
crates/cairn-resolver-eval/fixtures/python/: animal.py  cat.py  dog.py  main.py
crates/cairn-resolver-eval/fixtures/ruby/app/: usage.rb
crates/cairn-resolver-eval/fixtures/ruby/lib/: animal.rb  cat.rb  dog.rb  logging.rb  loud_dog.rb  meta.rb  utils.rb
crates/cairn-resolver-eval/fixtures/rust/src/: greeter.rs  lib.rs  logger.rs  shouter.rs
crates/cairn-resolver-eval/fixtures/swift/: BaseService.swift  Greeter.swift  Helpers.swift  IntermediateService.swift  Main.swift  Service.swift
crates/cairn-resolver-eval/fixtures/typescript/: greeter.ts  hello.ts  index.ts  shout.ts
crates/cairn-resolver-eval/src/: cases.rs  fixture.rs  lib.rs  report.rs  runner.rs  types.rs
crates/cairn-resolver-eval/tests/: golden.rs  perf.rs
crates/cairn-watch/: Cargo.toml
crates/cairn-watch/src/: lib.rs  matcher.rs  scan.rs
(+108 files in other folders)
