[workspace]
resolver = "3"
members = [
    "crates/cairn",
    "crates/cairn-core",
    "crates/cairn-proto",
    "crates/cairn-lang-api",
    "crates/cairn-lang-treesitter-generic",
    "crates/cairn-lang-rust",
    "crates/cairn-lang-rust-tier3",
    "crates/cairn-lang-python",
    "crates/cairn-lang-python-tier3",
    "crates/cairn-lang-markdown",
    "crates/cairn-lang-typescript",
    "crates/cairn-lang-go",
    "crates/cairn-lang-go-tier3",
    "crates/cairn-watch",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Naoto Morishima"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/naoto256/cairn"
homepage = "https://github.com/naoto256/cairn"
readme = "README.md"

[workspace.lints.rust]
# `deny` (not `forbid`) at workspace scope so a crate that has a
# legitimate need for `#[allow(unsafe_code)]` (e.g. the linker-
# section attribute `linkme::distributed_slice` expands to on its
# entries) can opt in locally. Crates that write no unsafe code of
# their own still set `#![forbid(unsafe_code)]` at their crate root
# for the absolute guarantee.
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
# Default clippy ("all" group: correctness + suspicious + complexity
# + perf + style) is what CI denies on. We do NOT opt into `pedantic`
# at the workspace level — pedantic mixes useful warnings (e.g.
# `missing_errors_doc`) with noisy style preferences (e.g.
# `doc_markdown`, `useless_format`) at a frequency that makes
# `-D warnings` unworkable mid-development. Crates may opt in
# individually if they want stricter enforcement.

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Hashing (CAS layer; sha1 matches git's blob hash format)
sha1 = "0.10"
hex = "0.4"

# Paths
dirs = "5"

# Filesystem & git
notify = "7"
notify-debouncer-full = "0.4"
ignore = "0.4"

# Parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-md = "0.3"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.23"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors & logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Linker-time plugin registry (static linking only)
linkme = "0.3"

# Argument parsing
clap = { version = "4", features = ["derive"] }

# Internal crates
cairn-core = { version = "0.2.0", path = "crates/cairn-core" }
cairn-proto = { version = "0.2.0", path = "crates/cairn-proto" }
cairn-lang-api = { version = "0.2.0", path = "crates/cairn-lang-api" }
cairn-lang-treesitter-generic = { version = "0.2.0", path = "crates/cairn-lang-treesitter-generic" }
cairn-lang-rust = { version = "0.2.0", path = "crates/cairn-lang-rust" }
cairn-lang-rust-tier3 = { version = "0.2.0", path = "crates/cairn-lang-rust-tier3" }
cairn-lang-python = { version = "0.2.0", path = "crates/cairn-lang-python" }
cairn-lang-python-tier3 = { version = "0.2.0", path = "crates/cairn-lang-python-tier3" }
cairn-lang-markdown = { version = "0.2.0", path = "crates/cairn-lang-markdown" }
cairn-lang-typescript = { version = "0.2.0", path = "crates/cairn-lang-typescript" }
cairn-lang-go = { version = "0.2.0", path = "crates/cairn-lang-go" }
cairn-lang-go-tier3 = { version = "0.2.0", path = "crates/cairn-lang-go-tier3" }
cairn-watch = { version = "0.2.0", path = "crates/cairn-watch" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
