[workspace]
resolver = "3"
members = [
    "crates/cairn",
    "crates/cairn-core",
    "crates/cairn-proto",
    "crates/cairn-lang-api",
    "crates/cairn-lang-treesitter-generic",
    "crates/cairn-lang-rust",
    "crates/cairn-lang-rust-tier3",
    "crates/cairn-lang-python",
    "crates/cairn-lang-python-tier25",
    "crates/cairn-lang-python-tier3",
    "crates/cairn-lang-markdown",
    "crates/cairn-lang-php",
    "crates/cairn-lang-php-tier3",
    "crates/cairn-lang-php-tier25",
    "crates/cairn-lang-ruby",
    "crates/cairn-lang-ruby-tier25",
    "crates/cairn-lang-ruby-tier3",
    "crates/cairn-lang-typescript",
    "crates/cairn-lang-typescript-tier3",
    "crates/cairn-lang-go",
    "crates/cairn-lang-go-tier3",
    "crates/cairn-lang-clangd-tier3",
    "crates/cairn-lang-c",
    "crates/cairn-lang-cpp",
    "crates/cairn-lang-csharp",
    "crates/cairn-lang-csharp-tier25",
    "crates/cairn-lang-csharp-tier3",
    "crates/cairn-lang-java",
    "crates/cairn-lang-java-tier3",
    "crates/cairn-lang-javascript-tier25",
    "crates/cairn-lang-kotlin",
    "crates/cairn-lang-kotlin-tier25",
    "crates/cairn-lang-kotlin-tier3",
    "crates/cairn-lang-swift",
    "crates/cairn-lang-swift-tier25",
    "crates/cairn-lang-swift-tier3",
    "crates/cairn-lang-objc",
    "crates/cairn-watch",
    "crates/cairn-resolver-eval",
]

[workspace.package]
version = "0.6.2"
edition = "2024"
rust-version = "1.85"
authors = ["Naoto Morishima"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/naoto256/cairn"
homepage = "https://github.com/naoto256/cairn"
readme = "README.md"

[workspace.lints.rust]
# `deny` (not `forbid`) at workspace scope so a crate that has a
# legitimate need for `#[allow(unsafe_code)]` (e.g. the linker-
# section attribute `linkme::distributed_slice` expands to on its
# entries) can opt in locally. Crates that write no unsafe code of
# their own still set `#![forbid(unsafe_code)]` at their crate root
# for the absolute guarantee.
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
# Default clippy ("all" group: correctness + suspicious + complexity
# + perf + style) is what CI denies on. We do NOT opt into `pedantic`
# at the workspace level — pedantic mixes useful warnings (e.g.
# `missing_errors_doc`) with noisy style preferences (e.g.
# `doc_markdown`, `useless_format`) at a frequency that makes
# `-D warnings` unworkable mid-development. Crates may opt in
# individually if they want stricter enforcement.

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Hashing (CAS layer; sha1 matches git's blob hash format)
sha1 = "0.10"
hex = "0.4"

# Paths
dirs = "5"

# Filesystem & git
notify = "7"
notify-debouncer-full = "0.4"
ignore = "0.4"

# Parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-md = "0.3"
tree-sitter-ruby = "0.23"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
# Pinned: 0.23.5 is generated with tree-sitter-cli 0.25 (ABI 15),
# which the workspace's tree-sitter 0.24 runtime cannot load. 0.23.1
# is the last ABI-14 release.
tree-sitter-c-sharp = "=0.23.1"
tree-sitter-php = "0.23"
# Pinned: tree-sitter-kotlin-ng follows semver but a 1.x bump could ship
# ABI 15, which the workspace's tree-sitter 0.24 runtime cannot load —
# same precedent as the swift / c-sharp pins above. Re-evaluate when
# the workspace upgrades to tree-sitter >= 0.25.
tree-sitter-kotlin-ng = "=1.1.0"
# Pinned: tree-sitter-swift 0.7.1+ ships ABI 15 artifacts, which
# tree-sitter 0.24 (ABI <= 14) rejects at set_language time.
# Re-evaluate when the workspace moves to tree-sitter >= 0.25.
tree-sitter-c = "0.23"
# Pinned per workspace policy: tree-sitter 0.24 runtime loads ABI <= 14
# only, so a future 0.23.x or 0.24.x of tree-sitter-cpp that bumps to
# ABI 15 (as c-sharp 0.23.5 did) would break set_language. 0.23.4 is the
# version validated against the current runtime; raise when the
# workspace upgrades to tree-sitter >= 0.25.
tree-sitter-cpp = "=0.23.4"
tree-sitter-swift = "=0.7.0"
# tree-sitter-objc 3.0.2 ships ABI 14, matching the workspace's
# tree-sitter 0.24 runtime. Re-evaluate when bumping tree-sitter.
tree-sitter-objc = "3.0.2"
tree-sitter-java = "0.23"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors & logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Linker-time plugin registry (static linking only)
linkme = "0.3"

# Argument parsing
clap = { version = "4", features = ["derive"] }

# Internal crates
cairn-core = { version = "0.6.2", path = "crates/cairn-core" }
cairn-proto = { version = "0.6.2", path = "crates/cairn-proto" }
cairn-lang-api = { version = "0.6.2", path = "crates/cairn-lang-api" }
cairn-lang-treesitter-generic = { version = "0.6.2", path = "crates/cairn-lang-treesitter-generic" }
cairn-lang-rust = { version = "0.6.2", path = "crates/cairn-lang-rust" }
cairn-lang-rust-tier3 = { version = "0.6.2", path = "crates/cairn-lang-rust-tier3" }
cairn-lang-python = { version = "0.6.2", path = "crates/cairn-lang-python" }
cairn-lang-python-tier25 = { version = "0.6.2", path = "crates/cairn-lang-python-tier25" }
cairn-lang-python-tier3 = { version = "0.6.2", path = "crates/cairn-lang-python-tier3" }
cairn-lang-markdown = { version = "0.6.2", path = "crates/cairn-lang-markdown" }
cairn-lang-php = { version = "0.6.2", path = "crates/cairn-lang-php" }
cairn-lang-php-tier3 = { version = "0.6.2", path = "crates/cairn-lang-php-tier3" }
cairn-lang-php-tier25 = { version = "0.6.2", path = "crates/cairn-lang-php-tier25" }
cairn-lang-ruby = { version = "0.6.2", path = "crates/cairn-lang-ruby" }
cairn-lang-ruby-tier25 = { version = "0.6.2", path = "crates/cairn-lang-ruby-tier25" }
cairn-lang-ruby-tier3 = { version = "0.6.2", path = "crates/cairn-lang-ruby-tier3" }
cairn-lang-typescript = { version = "0.6.2", path = "crates/cairn-lang-typescript" }
cairn-lang-typescript-tier3 = { version = "0.6.2", path = "crates/cairn-lang-typescript-tier3" }
cairn-lang-go = { version = "0.6.2", path = "crates/cairn-lang-go" }
cairn-lang-go-tier3 = { version = "0.6.2", path = "crates/cairn-lang-go-tier3" }
cairn-lang-clangd-tier3 = { version = "0.6.2", path = "crates/cairn-lang-clangd-tier3" }
cairn-lang-c = { version = "0.6.2", path = "crates/cairn-lang-c" }
cairn-lang-cpp = { version = "0.6.2", path = "crates/cairn-lang-cpp" }
cairn-lang-csharp = { version = "0.6.2", path = "crates/cairn-lang-csharp" }
cairn-lang-csharp-tier3 = { version = "0.6.2", path = "crates/cairn-lang-csharp-tier3" }
cairn-lang-csharp-tier25 = { version = "0.6.2", path = "crates/cairn-lang-csharp-tier25" }
cairn-lang-java = { version = "0.6.2", path = "crates/cairn-lang-java" }
cairn-lang-java-tier3 = { version = "0.6.2", path = "crates/cairn-lang-java-tier3" }
cairn-lang-javascript-tier25 = { version = "0.6.2", path = "crates/cairn-lang-javascript-tier25" }
cairn-lang-kotlin = { version = "0.6.2", path = "crates/cairn-lang-kotlin" }
cairn-lang-kotlin-tier25 = { version = "0.6.2", path = "crates/cairn-lang-kotlin-tier25" }
cairn-lang-kotlin-tier3 = { version = "0.6.2", path = "crates/cairn-lang-kotlin-tier3" }
cairn-lang-swift = { version = "0.6.2", path = "crates/cairn-lang-swift" }
cairn-lang-swift-tier25 = { version = "0.6.2", path = "crates/cairn-lang-swift-tier25" }
cairn-lang-swift-tier3 = { version = "0.6.2", path = "crates/cairn-lang-swift-tier3" }
cairn-lang-objc = { version = "0.6.2", path = "crates/cairn-lang-objc" }
cairn-watch = { version = "0.6.2", path = "crates/cairn-watch" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
