[package]
name = "cairn-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Core daemon: content-addressed store, anchor/manifest layers, JSON-RPC dispatch."

[dependencies]
cairn-proto.workspace = true
cairn-lang-api.workspace = true
cairn-watch.workspace = true
futures.workspace = true
tokio.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
async-trait = "0.1"
linkme.workspace = true
sha1.workspace = true
hex.workspace = true
rustix = { version = "1.1.4", features = ["fs", "process"] }

[dev-dependencies]
tempfile = "3"
cairn-lang-rust.workspace = true
cairn-lang-python.workspace = true
cairn-lang-typescript.workspace = true
cairn-lang-c.workspace = true
cairn-lang-cpp.workspace = true
cairn-lang-objc.workspace = true
# markdown is a genuinely syntactic-only backend (no analyzer); used in
# tests to exercise the Syntactic → Completeness::Partial wiring.
cairn-lang-markdown.workspace = true

[lints]
workspace = true
