[package]
name = "cairn-lang-c"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "C language backend (tree-sitter floor; analyzer slot reserved for clangd)."

[dependencies]
cairn-lang-api.workspace = true
cairn-lang-treesitter-generic.workspace = true
tree-sitter.workspace = true
tree-sitter-c.workspace = true
linkme.workspace = true

[lints]
workspace = true
