[package]
name = "cairn-lang-clangd-tier3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "C, C++, and Objective-C Tier-3 workspace analyzers backed by clangd LSP."

[dependencies]
cairn-core.workspace = true
linkme.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-objc.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
