[package]
name = "cairn-lang-csharp-tier3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "C# csharp-ls Tier-3 workspace analyzer for Cairn."

[dependencies]
cairn-core.workspace = true
cairn-lang-api.workspace = true
cairn-lang-csharp.workspace = true
dirs.workspace = true
linkme.workspace = true
serde_json.workspace = true
tree-sitter.workspace = true
tree-sitter-c-sharp.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
