[package]
name = "cairn-lang-csharp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "C# language backend (tree-sitter floor + structural Tier-2 analyzer)."

[dependencies]
cairn-lang-api.workspace = true
cairn-lang-treesitter-generic.workspace = true
tree-sitter.workspace = true
tree-sitter-c-sharp.workspace = true
linkme.workspace = true

[lints]
workspace = true
