[package]
name = "cairn-lang-go-tier3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Go Tier-3 workspace analyzer backed by gopls LSP."

[dependencies]
cairn-core.workspace = true
linkme.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-go.workspace = true

[dev-dependencies]
cairn-lang-go.workspace = true
rusqlite.workspace = true
tempfile = "3"

[lints]
workspace = true
