[package]
name = "cairn-lang-java-tier3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Java Tier-3 workspace analyzer backed by Eclipse JDT Language Server."

[dependencies]
cairn-core.workspace = true
dirs.workspace = true
linkme.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-java.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
