[package]
name = "cairn-lang-objc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Objective-C language backend (tree-sitter floor plus blob-scoped Tier-2 analyzer; .mm and .h are left to the C backend)."

[dependencies]
cairn-lang-api.workspace = true
cairn-lang-treesitter-generic.workspace = true
tree-sitter.workspace = true
tree-sitter-objc.workspace = true
linkme.workspace = true

[lints]
workspace = true
