[package]
name = "cairn-lang-php"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "PHP language backend (tree-sitter floor; mixed HTML/PHP grammar)."

[dependencies]
cairn-lang-api.workspace = true
cairn-lang-treesitter-generic.workspace = true
tree-sitter.workspace = true
tree-sitter-php.workspace = true
linkme.workspace = true

[lints]
workspace = true
