[package]
name = "cairn-lang-python-tier25"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Python Tier-2.5 in-process workspace analyzer (tree-sitter, no LSP)."

[dependencies]
cairn-core.workspace = true
cairn-proto.workspace = true
linkme.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
