[package]
name = "cairn-lang-typescript-tier3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "TypeScript, JavaScript, and TSX Tier-3 workspace analyzers backed by typescript-language-server LSP."

[dependencies]
cairn-core.workspace = true
linkme.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
