[package]
name = "cairn-lang-typescript"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "TypeScript language backend (tree-sitter floor; analyzer slot reserved for tsserver / tsc)."

[dependencies]
cairn-lang-api.workspace = true
cairn-lang-treesitter-generic.workspace = true
tree-sitter.workspace = true
tree-sitter-typescript.workspace = true
linkme.workspace = true

[lints]
workspace = true
