[package]
name = "cairn-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Wire types for Cairn's MCP tools and control-socket commands."

[dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
