[package]
name = "cairn-watch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Filesystem and git-ref watcher: notify-backed events with debouncing and full-scan reconciliation."

[dependencies]
notify.workspace = true
notify-debouncer-full.workspace = true
ignore.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
